<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="2dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postalCode"
                android:textSize="20sp"
                android:id="@+id/et1"
                android:textColor="#fff"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="#fff"
                android:id="@+id/etPostalCode"
                android:layout_height="wrap_content"
                android:hint="@string/hint_null"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="#fff"
                android:id="@+id/et2"
                android:textSize="20sp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:id="@+id/etCity"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:hint="@string/hint_null"/>
        </LinearLayout>

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textSize="20sp"
                android:id="@+id/et3"
                android:textColor="#fff"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="#fff"
                android:id="@+id/etStreet"
                android:layout_height="wrap_content"
                android:hint="@string/hint_null"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfBuild"
                android:textColor="#fff"
                android:id="@+id/et4"
                android:textSize="20sp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:inputType="number"
                android:textColor="#fff"
                android:id="@+id/etBuildNumber"
                android:layout_height="wrap_content"
                android:hint="@string/hint_null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aparmentNumber"
                android:id="@+id/et5"
                android:textSize="20sp"
                android:textColor="#fff"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="18sp"
                android:inputType="number"
                android:textColor="#fff"
                android:id="@+id/etDoorNumber"
                android:layout_height="wrap_content"
                android:hint="@string/hint_null"/>
        </LinearLayout>


    </LinearLayout>



</LinearLayout>