<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="#000"
            android:paddingEnd="40dp"
            android:inputType="textPassword"
            android:id="@+id/etOldPassword"
            android:layout_height="wrap_content"
            android:hint="@string/hont_oldPassword"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000"
            android:inputType="textPassword"
            android:paddingEnd="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:id="@+id/etNewPassword"
            android:layout_height="wrap_content"
            android:hint="@string/hint_newPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000"
            android:fontFamily="@font/montserrat_bold"
            android:id="@+id/etConfirmNewPassword"
            android:layout_height="wrap_content"
            android:paddingEnd="40dp"
            android:inputType="textPassword"
            android:hint="@string/hint_ConfirmNewPassword"/>
    </com.google.android.material.textfield.TextInputLayout>




</LinearLayout>